# recent-pdb

./: .gitignore  README.md  Snakefile  config.local.yaml.example  config.yaml  pyproject.toml  setup_env.sh.template  targets_test.txt
containers/dockerfiles/: Dockerfile.alphafold3  Dockerfile.colabfold  Dockerfile.protenix  hhsuite.def  hmmer.def  mmseqs2.def  openstructure.def
docs/: design.md  extending.md  usage.md
scripts/: aggregate.py  build_containers.sh  build_docker_containers.sh  generate_pdb_ids.py  manage_resources.sh  merge_msa.py  msa_search.py  setup_resources.sh  setup_test.py  sync_pdb.py  target_registry.py  verify_containers.sh
scripts/eval/: __init__.py  base.py  ost_scorer.py
scripts/input_gen/: __init__.py  alphafold3.py  base.py  colabfold.py  protenix.py
scripts/server/: __init__.py  msa_client.py  msa_server.py
scripts/utils/: __init__.py  config.py
slurm/: config.yaml
